--- a/package.json
+++ b/package.json
@@ -2,21 +2,25 @@
   "name": "wheretochill",
   "version": "1.0.0",
   "description": "A webApp focused on mapping out bars across Singapore and providing user inputs for review",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Sherman Tay",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.12.1",
     "cloudinary": "^1.24.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.15",
