--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-heroku-addon": "^0.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   }
